added visite technique

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -182,7 +182,7 @@
 	"PERSONNEL": "Personnel",
 	"DEPARTEMENT": "Departement",
 	"MATERIEL": "Materiel",
-	"RH": "RH",
+	"RH": "Ressources Humaines",
 	"MISSION": "Mission",
 	"typeMission": "Type de mission",
 	"listeMission": "Liste des missions",
